# bass-sys

./: Cargo.toml  README.md  bassmix.h  build.rs
doc/: Info.md  basscd.chm  bassloud.chm  basswasapi.chm
doc/bass/: #IDXHDR  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  $FIftiMain  $OBJINST  BASS_3DVECTOR.html  BASS_ATTRIB_BITRATE.html  BASS_ATTRIB_BUFFER.html  BASS_ATTRIB_CPU.html  BASS_ATTRIB_DOWNLOADPROC.html  BASS_ATTRIB_FREQ.html  BASS_ATTRIB_GRANULE.html  BASS_ATTRIB_MUSIC_ACTIVE.html  BASS_ATTRIB_MUSIC_AMPLIFY.html  BASS_ATTRIB_MUSIC_BPM.html  BASS_ATTRIB_MUSIC_PANSEP.html  BASS_ATTRIB_MUSIC_PSCALER.html  BASS_ATTRIB_MUSIC_SPEED.html  BASS_ATTRIB_MUSIC_VOL_CHAN.html  BASS_ATTRIB_MUSIC_VOL_GLOBAL.html  BASS_ATTRIB_MUSIC_VOL_INST.html  BASS_ATTRIB_NET_RESUME.html  BASS_ATTRIB_NORAMP.html  BASS_ATTRIB_PAN.html  BASS_ATTRIB_PUSH_LIMIT.html  BASS_ATTRIB_SCANINFO.html  BASS_ATTRIB_SRC.html  BASS_ATTRIB_TAIL.html  BASS_ATTRIB_USER.html  BASS_ATTRIB_VOL.html  BASS_ATTRIB_VOLDSP.html  BASS_ATTRIB_VOLDSP_PRIORITY.html  BASS_Apply3D.html  BASS_CHANNELINFO.html  BASS_CONFIG_3DALGORITHM.html  BASS_CONFIG_AM_DISABLE.html  (+206 more)
doc/basscd/: #IDXHDR  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  $FIftiMain  BASS_CD_Analog_GetPosition.html  BASS_CD_Analog_IsActive.html  BASS_CD_Analog_Play.html  BASS_CD_Analog_PlayFile.html  BASS_CD_Analog_Stop.html  BASS_CD_Door.html  BASS_CD_DoorIsLocked.html  BASS_CD_DoorIsOpen.html  BASS_CD_GetID.html  BASS_CD_GetInfo.html  BASS_CD_GetSpeed.html  BASS_CD_GetTOC.html  (+28 more)
src/: consts.rs  dword.rs  functions.rs  lib.rs  macros.rs  types.rs
src_build/: bindings.rs  bool.rs  doc_parser.rs  mod.rs  streamproc.rs
(+127 files in other folders)
