[package]
name = "bass-sys"
description = "BASS bindings for Rust"
version = "2.4.17"
authors = ["KernelError <villainkernelerror@gmail.com>"]
edition = "2018"
repository = "https://github.com/KernelErr0r/bass-sys"
license = "MIT"
keywords = ["bass", "bindings", "audio"]
categories = ["external-ffi-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
basscd = []
bassmix = []
bassloud = []
basswasapi = []
default = ["bassmix", "bassloud", "basscd"]

executable_path = []
loader_path = []
rpath = []

[dependencies]
libloading = "0.8.1"
once_cell = "1.13.0"

[build-dependencies]
bindgen = { git = "https://github.com/ILikeTeaALot/rust-bindgen.git", branch = "main" }
scraper = "0.19.0"
html5ever = "*"
#tl = { version = "0.7.8", features = ["simd"] }